# chenal

./: .gitignore  Cargo.toml  README.md  prek.toml
.github/workflows/: ci.yml
asm/: Cargo.toml  check-asm.sh  mpmc_recv.s  mpmc_recv__poll_acquire_slot_cold.s  mpmc_recv_blocking.s  mpmc_recv_blocking__acquire_slot_blocking_cold.s  mpmc_send.s  mpmc_send__poll_acquire_slot_cold.s  mpmc_send_blocking.s  mpmc_send_blocking__acquire_slot_blocking_cold.s  mpsc_recv__poll_acquire_slot_cold.s  mpsc_recv_blocking__acquire_slot_blocking_cold.s  mpsc_send.s  mpsc_send__poll_acquire_slot_cold.s  mpsc_send_blocking.s  mpsc_send_blocking__acquire_slot_blocking_cold.s  spmc_recv.s  spmc_recv__poll_acquire_slot_cold.s  spmc_recv_blocking.s  spmc_recv_blocking__acquire_slot_blocking_cold.s  spsc_recv.s  spsc_recv__poll_acquire_slot_cold.s  spsc_recv_blocking__acquire_slot_blocking_cold.s  spsc_send_blocking.s
asm/aarch64/mpmc/: recv.s  recv__poll_acquire_slot_cold.s  recv_blocking.s  recv_blocking__acquire_slot_blocking_cold.s  send.s  send__poll_acquire_slot_cold.s  send_blocking.s  send_blocking__acquire_slot_blocking_cold.s
asm/aarch64/mpsc/: recv.s  recv__poll_acquire_slot_cold.s  recv_blocking.s  recv_blocking__acquire_slot_blocking_cold.s  send.s  send__poll_acquire_slot_cold.s  send_blocking.s  send_blocking__acquire_slot_blocking_cold.s
asm/aarch64/spmc/: recv.s  recv__poll_acquire_slot_cold.s  recv_blocking.s  recv_blocking__acquire_slot_blocking_cold.s  send.s  send__poll_acquire_slot_cold.s  send_blocking.s  send_blocking__acquire_slot_blocking_cold.s
asm/aarch64/spsc/: recv.s  recv__poll_acquire_slot_cold.s  recv_blocking.s  recv_blocking__acquire_slot_blocking_cold.s  send.s  send__poll_acquire_slot_cold.s  send_blocking.s  send_blocking__acquire_slot_blocking_cold.s
asm/src/: lib.rs
asm/x86_64/mpmc/: recv.s  recv__poll_acquire_slot_cold.s  recv_blocking.s  recv_blocking__acquire_slot_blocking_cold.s  send.s  send__poll_acquire_slot_cold.s  send_blocking.s  send_blocking__acquire_slot_blocking_cold.s
asm/x86_64/mpsc/: recv.s  recv__poll_acquire_slot_cold.s  recv_blocking.s  recv_blocking__acquire_slot_blocking_cold.s  send.s  send__poll_acquire_slot_cold.s  send_blocking.s  send_blocking__acquire_slot_blocking_cold.s
asm/x86_64/spmc/: recv.s  recv__poll_acquire_slot_cold.s  recv_blocking.s  recv_blocking__acquire_slot_blocking_cold.s  send.s  send__poll_acquire_slot_cold.s  send_blocking.s  (+1 more)
asm/x86_64/spsc/: recv.s  send.s  (+6 more)
bench/: Cargo.toml  report.py
bench/benches/: bench.rs  mpsc.rs
bench/src/: async_channel.rs  chenal.rs  chenal_32.rs  chenal_32_ub.rs  chenal_loop.rs  chenal_ub.rs  crossbeam.rs  crossfire.rs  flume.rs  futures.rs  kanal.rs  lib.rs  postage.rs  std.rs  tachyonix.rs  tokio.rs
src/: array.rs  backoff.rs  blocking.rs  capacity.rs  channel.rs  compat.rs  errors.rs  internal.rs  lib.rs  loom.rs  macros.rs  mpmc.rs  mpsc.rs  private.rs  rc.rs  rx.rs  spmc.rs  spsc.rs  tx.rs  waiter.rs  weak.rs
src/compat/: mod.rs  tachyonix.rs
src/mpmc/: array.rs  racy_array.rs
src/mpsc/: array.rs  block.rs  vyukov.rs
src/spmc/: array.rs  racy_array.rs
src/spsc/: array.rs
tachyobench/: Cargo.toml
tachyobench/src/: channel_shims.rs  macros.rs  main.rs
tests/: compat_std_mpsc_sync.rs  compat_tachyonix.rs  compat_tokio.rs  mpmc_array.rs  mpmc_racy_array.rs  mpsc_array.rs  spmc_array.rs  spmc_racy_array.rs  spsc_array.rs
(+4 files in other folders)
