[package]
name = "chenal"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
blocking = ["std"]
std = ["aiq/std", "crossbeam-utils/std"]
stream = ["dep:futures-core"]

[dependencies]
aiq = { path = "../aiq", default-features = false, features = ["wait-queue"] }
crossbeam-utils = { version = "0.8", default-features = false }
futures-core = { version = "0.3", optional = true }
spmc-waker = { path = "../spmc_waker" }

[dev-dependencies]
futures = "0.3.32"
rstest = "0.26.1"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["futures"] }
const_fn = "0.4.12"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
dbg_macro = "warn"
semicolon_if_nothing_returned = "warn"


