[package]
name = "chenal"
version = "0.1.0-alpha.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyfo/chenal"
readme = "README.md"
keywords = ["channel", "async", "lock-free", "mpsc", "no_std"]
categories = ["concurrency", "asynchronous", "data-structures", "no-std"]
description = "Performant channel implementations"
rust-version = "1.87"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
blocking = ["std"]
compat-tokio = ["dep:tokio"]
compat-tokio-time = ["compat-tokio", "tokio/time"]
compat-std = ["blocking"]
std = ["aiq/std", "crossbeam-utils/std"]
stream = ["dep:futures-core"]

[dependencies]
aiq = { version = "0.1.0-alpha.2", default-features = false, features = ["wait-queue"] }
crossbeam-utils = { version = "0.8", default-features = false }
futures-core = { version = "0.3", optional = true }
spmc-waker = "0.1.0-alpha.1"
tokio = { version = "1", optional = true, default-features = false, features = ["rt"] }

[dev-dependencies]
futures = "0.3.32"
rstest = "0.26.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.5"
tokio-stream = "0.1.18"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["futures"] }
const_fn = "0.4.12"

[lib]
test = false

[[test]]
name = "mpsc_array"
required-features = ["blocking"]

[[test]]
name = "mpmc_array"
required-features = ["blocking"]

[[test]]
name = "spmc_array"
required-features = ["blocking"]

[[test]]
name = "spsc_array"
required-features = ["blocking"]

[[test]]
name = "compat_std_mpsc_sync"
required-features = ["compat-std"]

[[test]]
name = "compat_tokio"
required-features = ["blocking", "compat-tokio"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(miri_racy)'] }
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
dbg_macro = "warn"
semicolon_if_nothing_returned = "warn"


